# EnvAgent

./: .env.backup  .gitignore  Dockerfile.fulltest  LICENSE  README.md  REPOSITORY_BASED_LOGIC.md  VERTEX_AI_INTEGRATION.md  debug_predictions.json  example.env  example_usage.py  executionagent-nohup_2.out  installamatic-pyramid-envimplement-  manage_repositories.py  pyproject.toml  pyright_env_quality_check.sh  requirements.txt  test_context.json  test_delete_simple.py  test_repository_storage_only.py
app/: main.py
app/chat_models/: custom_chat_openai.py  custom_vertex_ai_chat.py
app/configuration/: config.py
app/container/: base_container.py  general_container.py  (+1 more)
projects/: batch_1_projects.txt  debug_predictions.json  envbench-python.txt  executionAgent.txt  installamatic_dataset.txt  piper-envbench-test.txt  predictions_20251005_215356.json  predictions_20251017_214923.json  predictions_20251018_094145.json  predictions_20251022_224636.json  predictions_20251023_210428.json  predictions_20251024_171513.json  predictions_20251024_173528.json  predictions_20251027_102650.json  predictions_20251027_234101.json  predictions_20251027_235001.json  predictions_20251028_001154.json  predictions_20251028_160930.json  predictions_20251028_161352.json  predictions_20251029_193454.json  predictions_20251029_212051.json  predictions_20251029_220458.json  predictions_20251029_222107.json  predictions_20251029_223416.json  pyright_env_quality_check.sh  pytest_env_quality_check.sh  repo2run.txt  swe-bench-lite.txt  swe-polybench-verified.txt
scripts/: parse_log_tokens.py
(+119 files in other folders)
